# cloud-treatment

./: .gitignore  CMakeLists.txt  CloudTreatment.pro  cloud-treatment.pro  index.html  launch-default-processing  params.json
datafiles/: cloud17(Floor).pcd
share/: CMakeLists.txt
share/cloud-treatment/pipeline/: cadmodeltreatment.yaml  calibrationtest.yaml  cloudviewer.yaml  crapahut.yaml  modelcalibration.yaml  pipelinetest.yaml  table-climbing.yaml
share/man/man1/: cloud-processing.1  cloud-processing.1~
share/yaml/: cloudtreatment.yaml  modelcalibration.yaml
src/: CMakeLists.txt  Doxyfile  application.cpp  application.h  cadmodeltreatmentcell.cpp  cadmodeltreatmentcell.h  cell.cpp  cell.h  cloudtreatment.cpp  custompclvisualizor.cpp  custompclvisualizor.h  dirs.hh.in  displaycadmodelcell.cpp  displaycadmodelcell.h  displayconvexcloudcell.cpp  displayconvexcloudcell.h  displaykeypointcloudcell.cpp  displaykeypointcloudcell.h  displaynormalcloudcell.cpp  displaynormalcloudcell.h  displayxyzcloudcell.cpp  displayxyzcloudcell.h  dominantplanesegmentationcell.cpp  dominantplanesegmentationcell.h  euclidianclustersextractioncell.cpp  euclidianclustersextractioncell.h  factory.h  filecell.cpp  filecell.h  filewritingcell.cpp  filewritingcell.h  filtercell.cpp  filtercell.h  hullconvexcell.cpp  hullconvexcell.h  main.cpp  modelcalibration.cpp  modelcalibrationcell.cpp  modelcalibrationcell.h  normalestimationcell.cpp  (+21 more)
surffiles/: point_cloud_body.surf
var/: CMakeLists.txt
